# rust-peerboard

./: .gitignore  Cargo.toml  LICENSE  README.md  assignment-brief.md  build.rs  peerboard.db
frontend/: vite.config.ts
frontend/src/: App.css  App.tsx  groupMsg.ts  hashString.ts  index.css  types.d.ts  useWebSocket.ts
frontend/src/components/: Header.css  Header.tsx  MessageBody.tsx  Sidebar.css  Sidebar.tsx
frontend/src/types/: messageTypes.d.ts  types.d.ts
proto/: peerboard.proto
src/: app.rs  behaviour.rs  bootstrap.rs  db.rs  keypair.rs  main.rs  message.rs  protocol.rs  ui.rs  ws.rs
