[package]
name = "peerboard"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }

libp2p = { version = "0.53", features = [
    "tcp",
    "quic",
    "dns",
    "noise",
    "yamux",
    "kad",
    "gossipsub",
    "macros",
    "tokio"
] }

futures = "0.3"