[package]
name = "peerboard"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
chrono = "0.4"
futures = "0.3"
libp2p = { version = "0.54", features = [
    "tokio", "tcp", "quic", "noise", "yamux",
    "gossipsub", "kad", "identify", "macros",
] }
prost = "0.13"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.5", features = ["cors"] }

[build-dependencies]
prost-build = "0.13"
protox = "0.7"
